--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,14 @@
       <h3>Calculate the change (<em>coins</em>) to return to a customer when they buy something.</h3>
     </div>
 
+<!--
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <!-- Load the QUnit Testing Framework from CDN - this is the important bit ... -->
+     Load the QUnit Testing Framework from CDN - this is the important bit ... 
     <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blanket.js/1.1.4/blanket.js"></script>
     <script src="change.js" data-cover></script>
     <script src="test.js"></script>
+-->
   </body>
 </html>
